@@ -24,11 +24,6 @@
       <essential/>
       <frozen/>
     </group>
-    <group name="proposed">
-      <description>GNOME modules proposed for inclusion in GNOME 2.10.</description>
-      <essential/>
-      <frozen/>
-    </group>
 	</release>
   <release name="HEAD">
     <group name="fifth-toe">
@@ -994,7 +989,7 @@
   </module>
   <module name="gnome-backgrounds">
     <version release="gnome-2.10">
-      <component name="gnome-backgrounds" dir="gnome-backgrounds" group="proposed">
+      <component name="gnome-backgrounds" dir="gnome-backgrounds" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-backgrounds.pot"/>
         <branch name="HEAD"/>
@@ -1122,7 +1117,7 @@
   </module>
   <module name="gnome-doc-utils">
     <version release="gnome-2.10">
-      <component name="gnome-doc-utils" dir="gnome-doc-utils" group="proposed">
+      <component name="gnome-doc-utils" dir="gnome-doc-utils" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-doc-utils.pot"/>
         <branch name="HEAD"/>
@@ -1223,8 +1218,8 @@
     </version>
   </module>
   <module name="gnome-keyring-manager">
-    <version release="gnome-2.10">
-      <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="proposed">
+    <version release="HEAD">
+      <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="extras">
 	<podir dir="po"/>
 	<potname name="gnome-keyring-manager.pot"/>
 	<branch name="HEAD"/>
@@ -1275,7 +1270,7 @@
   </module>
   <module name="gnome-menus">
     <version release="gnome-2.10">
-      <component name="gnome-menus" dir="gnome-menus" group="proposed">
+      <component name="gnome-menus" dir="gnome-menus" group="desktop">
 				<podir dir="po"/>
         <potname name="gnome-menus.pot"/>
         <branch name="HEAD"/>
@@ -1442,8 +1437,8 @@
     </version>
   </module>
   <module name="gnome-schedule">
-    <version release="gnome-2.10">
-      <component name="gnome-schedule" dir="gnome-schedule" group="proposed">
+    <version release="HEAD">
+      <component name="gnome-schedule" dir="gnome-schedule" group="extras">
 	<podir dir="po"/>
 	<potname name="gnome-schedule.pot"/>
 	<branch name="HEAD"/>
@@ -1566,8 +1561,8 @@
     </version>
   </module>
   <module name="gnome-user-share">
-    <version release="gnome-2.10">
-      <component name="gnome-user-share" dir="gnome-user-share" group="proposed">
+    <version release="HEAD">
+      <component name="gnome-user-share" dir="gnome-user-share" group="extras">
         <podir dir="po"/>
         <potname name="gnome-user-share.pot"/>
         <branch name="HEAD"/>
@@ -1774,8 +1769,8 @@
     </version>
   </module>
   <module name="goobox">
-    <version release="gnome-2.10">
-      <component name="goobox" dir="goobox" group="proposed">
+    <version release="HEAD">
+      <component name="goobox" dir="goobox" group="extras">
         <podir dir="po"/>
         <potname name="goobox.pot"/>
         <branch name="HEAD"/>
@@ -1963,8 +1958,8 @@
     </version>
   </module>
   <module name="gwget">
-    <version release="gnome-2.10">
-      <component name="gwget" dir="gwget" group="proposed">
+    <version release="HEAD">
+      <component name="gwget" dir="gwget" group="extras">
 	<podir dir="po"/>
 	<potname name="gwget.pot"/>
 	<branch name="HEAD"/>
@@ -2182,8 +2177,8 @@
     </version>
   </module>
   <module name="libgnomesu">
-    <version release="gnome-2.10">
-      <component name="libgnomesu" dir="libgnomesu" group="proposed">
+    <version release="HEAD">
+      <component name="libgnomesu" dir="libgnomesu" group="extras">
         <podir dir="po"/>
         <potname name="libgnomesu-1.0.pot"/>
         <branch name="HEAD"/>
@@ -2520,8 +2515,8 @@
     </version>
   </module>
   <module name="nautilus-sendto">
-    <version release="gnome-2.10">
-      <component name="nautilus-sendto" dir="nautilus-sendto" group="proposed">
+    <version release="HEAD">
+      <component name="nautilus-sendto" dir="nautilus-sendto" group="extras">
         <podir dir="po"/>
         <potname name="nautilus-sendto.pot"/>
         <branch name="HEAD"/>
@@ -2780,7 +2775,7 @@
   </module>
   <module name="sound-juicer">
     <version release="gnome-2.10">
-      <component name="sound-juicer" dir="sound-juicer" group="proposed">
+      <component name="sound-juicer" dir="sound-juicer" group="desktop">
 	<podir dir="po"/>
 	<potname name="sound-juicer.pot"/>
 	<branch name="HEAD"/>
@@ -2813,7 +2808,7 @@
   </module>
   <module name="totem">
     <version release="gnome-2.10">
-      <component name="totem" dir="totem" group="proposed">
+      <component name="totem" dir="totem" group="desktop">
         <podir dir="po"/>
 	<potname name="totem.pot"/>
 	<branch name="HEAD"/>
