@@ -1,3 +1,8 @@
+2005-02-07  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Moved new modules according to final
+	module list from proposed to desktop, and the rest to extras.
+
 2005-02-02  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gucharmap has been branched.
